--- a/webflow.css
+++ b/webflow.css
@@ -3763,7 +3763,7 @@ p {
     .container.hero-s {
         justify-content: center;
         align-items: flex-start;
-        padding-top: 32rem;
+        padding-top: 25rem;
     }
     .container.benefits-s {
         flex-flow: column;
@@ -3793,9 +3793,10 @@ p {
         height: 250vh;
     }
     .hero-phone {
-        width: 80rem;
-        top: 38rem;
-        left: 5rem;
+        width: 75rem;
+        top: 45rem;
+        left: 50%;
+        transform: translateX(-50%);
     }
     .headline-h1 {
         font-size: 10.66rem;
@@ -3835,7 +3836,7 @@ p {
         inset: auto -2% 11% auto;
     }
     .hero-down-block {
-        padding-top: 50rem;
+        padding-top: 55rem;
         padding-bottom: 10rem;
     }
     .discover-lights-wrapper {
@@ -4134,6 +4135,7 @@ p {
     .hero-down-elements {
         grid-column-gap: 7.2rem;
         grid-row-gap: 7.2rem;
+        flex-direction: column;
     }
     .form-down-text {
         font-size: 3.73rem;
